--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contuct us</title>
     <link rel="stylesheet" href="./contact.css">
-    <link rel="shortcut icon" href="./images.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://miro.medium.com/v2/resize:fit:1400/1*swrJUKArrL4LhNk2pNbDBg.jpeg" type="image/x-icon">
 </head>
 <body>
     <div class="header">
@@ -18,7 +18,7 @@
       </div>
          <div class="search_field">
          
-          <img style="border-radius: 50%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0mEgzyRl2lteE7XrNQOsR7C7uWetz458meFn5g3CvurFM7wsFYm-BGEmnh7P80XCCwSA&usqp=CAU" alt="">
+          <img style="border-radius: 50%;" src="https://miro.medium.com/v2/resize:fit:1400/1*swrJUKArrL4LhNk2pNbDBg.jpeg" alt="">
               
              <input type="text" placeholder="Search products, brands and categories" autocomplete="off">
              <button type="button" >
