--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>MIMO</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="shortcut icon" href="./images.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://miro.medium.com/v2/resize:fit:1400/1*swrJUKArrL4LhNk2pNbDBg.jpeg" type="image/x-icon">
   </head>
   <body>
     <div id="split_screen">
-      <img style="border-radius: 50%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0mEgzyRl2lteE7XrNQOsR7C7uWetz458meFn5g3CvurFM7wsFYm-BGEmnh7P80XCCwSA&usqp=CAU" alt="">
+      <img style="border-radius: 50%;" width="50%" src="https://miro.medium.com/v2/resize:fit:1400/1*swrJUKArrL4LhNk2pNbDBg.jpeg" alt="">
       
     </div>
     <div id="main">
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="search_field">
-        <img style="border-radius: 50%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0mEgzyRl2lteE7XrNQOsR7C7uWetz458meFn5g3CvurFM7wsFYm-BGEmnh7P80XCCwSA&usqp=CAU" alt="">
+        <img style="border-radius: 50%;" src="https://miro.medium.com/v2/resize:fit:1400/1*swrJUKArrL4LhNk2pNbDBg.jpeg" alt="">
 
         <input
           type="text"
