updated some data

--- a/About.html
+++ b/About.html
@@ -39,6 +39,15 @@
                <option value="Hisense">Track Your Order  </option>
              </select>
 <div class="btn">Cart</div>
- 
+         </div>
+<div class="element">
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>I am John Doe</h1>
+      <p>And I'm a Photographer</p>
+      <button>Hire me</button>
+    </div>
+  </div>
+</div>
 </body>
 </html>
