--- a/Afrinet.html
+++ b/Afrinet.html
@@ -19,10 +19,25 @@
   </div>
   </div>
   <div class="search_field">
-    <img style="border-radius: 50%;" src="https://static.vecteezy.com/system/resources/thumbnails/016/586/642/small_2x/abstract-global-network-connection-png.png" alt="">
-
-   
-    <button type="button">Search</button>
+    <img style="width: 50; border-radius: 50%;" src="https://media.istockphoto.com/id/1299677577/vector/people-family-vector-community-concept-stock-illustration.jpg?b=1&s=612x612&w=0&k=20&c=mMbUerLhnaYeXmzY9SJVsVX_tuxPElFAaeAEk7A0PXw=" alt="">
+    
+    <div class="runChatBot">
+    <button
+      onclick="runChatBot()"
+      style="
+        background-image: url('https://static.vecteezy.com/system/resources/previews/025/949/531/large_2x/3d-rendered-colorful-glossy-and-matte-ultra-hd-geometric-background-wallpaper-ai-generated-free-photo.jpeg');
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        cursor: pointer;
+        opacity: 0.9;
+        border-radius: 5px;
+      "
+    >
+      Click here to ask me a question
+    </button>
+  </div>
+    
     <select name="Account" id="">
       Account
       <option value="Hisense">My Account</option>
